inception-of-things/p2/configs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
spec:
  rules:
  - host: "app1.com"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: app1
              port:
                number: 80
  - host: app2.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: app2
              port:
                number: 80
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: app3
              port:
                number: 80
